tests/const_top_assign_bad.stderr
tests/const_top_assign_bad.sl:5:2: error: SL2004: type mismatch: assignment target is const
