tests/const_top_assign_bad.sl
const X i32 = 1

fn main() {
	X = 2
}
